feat: push gitignore and readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,44 @@
-# Python cache and bytecode
+# === PYTHON / DJANGO ===
+*.pyc
 __pycache__/
-*.py[cod]
 *.pyo
 *.pyd
-
-# Session and credentials
-session.json
+*.env
 .env
-
-# Logs and temp files
+.env.*
+db.sqlite3
+media/
+*.sqlite3
 *.log
-*.tmp
 
-# IDEs (optional)
+# Django secret files
+*.secret
+*.pem
+*.key
+*.crt
+
+# VSCode + PyCharm
 .vscode/
 .idea/
+
+# Django migrations
+**/migrations/
+!**/migrations/__init__.py
+
+# === NODE / REACT ===
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
+frontend/.env
+frontend/.env.*
+
+# === OS / Editor Stuff ===
+.DS_Store
+Thumbs.db
+session.json
+
+# === Python Virtual Environment ===
+venv/
+env/
+ENV/
+.venv/
