--- a/web/frontend-v2/package.json
+++ b/web/frontend-v2/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-portal": "1.1.6",
     "@radix-ui/react-presence": "1.1.4",
     "@radix-ui/react-primitive": "2.1.0",
+    "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-roving-focus": "1.1.7",
     "@radix-ui/react-select": "2.2.2",
     "@radix-ui/react-slider": "1.3.2",
