--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,13 @@ python-dotenv>=1.0.0
 
 # Logging
 logging>=0.4.9.6
+
+# LLM
+llama_index==0.12.40
+Flask==3.1.1
+
+# Mongodb
+pymongo==4.13.0
+
+# Env loader
+python-dotenv==1.1.0
