--- a/src/llm/.env.example
+++ b/src/llm/.env.example
@@ -4,6 +4,10 @@ MONGO_PERSONA_DB_NAME=
 PINECONE_API_KEY=
 PINECONE_INDEX=
 
+LLM_MODULE_HOST=
+LLM_MODULE_PORT= 
+AUTOMATION_MODULE_URL=
+
 POSTGRES_HOST=
 POSTGRES_PORT=
 POSTGRES_DB_NAME=
