feat: add automation for dm message

--- a/src/backend/.env.example
+++ b/src/backend/.env.example
@@ -6,3 +6,7 @@ DB_USER=nusava_user
 DB_PASSWORD=supersecret123
 DB_HOST=localhost
 DB_PORT=5432
+
+# in seconds
+MAX_INTERVAL=3600 
+MIN_INTERVAL=300
