integration set user and chat

--- a/src/backend/.env.example
+++ b/src/backend/.env.example
@@ -1,6 +1,8 @@
 DEBUG=True
 SECRET_KEY=your_secret_key_here
 
+LLM_MODULE_URL=localhost:7000
+
 DB_NAME=nusava_db
 DB_USER=nusava_user
 DB_PASSWORD=supersecret123
