--- a/src/backend/.env.example
+++ b/src/backend/.env.example
@@ -8,6 +8,7 @@ DB_USER=nusava_user
 DB_PASSWORD=supersecret123
 DB_HOST=localhost
 DB_PORT=5432
+DB_PRODUCTION_URL=
 
 # in seconds
 MAX_INTERVAL=3600 
