feat: add cloudinary

--- a/src/backend/.env.example
+++ b/src/backend/.env.example
@@ -13,3 +13,9 @@ DB_PRODUCTION_URL=
 # in seconds
 MAX_INTERVAL=3600 
 MIN_INTERVAL=300
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
+DEBUG=True 
