--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -1,10 +1,12 @@
 # Core Django dependencies
-Django>=4.2.0
-djangorestframework>=3.14.0
-djangorestframework-simplejwt>=5.2.0
-django-cors-headers>=4.0.0
-django-environ>=0.10.0
-
+dj-database-url==3.0.0
+Django==5.1.7
+django-cors-headers==4.0.0
+django-environ==0.10.0
+djangorestframework==3.16.0
+djangorestframework_simplejwt==5.4.0
+djongo==1.2.31
+django-cloudinary-storage==0.3.0
 # Database
 psycopg2-binary>=2.9.0
 
@@ -33,3 +35,6 @@ rest_framework_simplejwt==0.0.2
 
 # Requests
 Requests==2.32.3
+
+# cloudinary
+cloudinary==1.44.1
