--- a/src/frontend-v2/.env.example
+++ b/src/frontend-v2/.env.example
@@ -1,2 +1,5 @@
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000/api
 NEXT_PUBLIC_LLM_API_BASE_URL=http://localhost:7000
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
