--- a/src/frontend-v2/package.json
+++ b/src/frontend-v2/package.json
@@ -51,6 +51,7 @@
     "aria-hidden": "1.2.4",
     "axios": "^1.9.0",
     "class-variance-authority": "0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "2.1.1",
     "detect-node-es": "1.1.0",
     "get-nonce": "1.0.1",
