--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -1,12 +1,12 @@
 # Core Django dependencies
-dj-database-url==3.0.0
-Django==5.1.7
-django-cors-headers==4.0.0
-django-environ==0.10.0
-djangorestframework==3.16.0
-djangorestframework_simplejwt==5.4.0
-djongo==1.2.31
-django-cloudinary-storage==0.3.0
+dj-database-url>=3.0.0
+Django>=4.2.0
+djangorestframework>=3.14.0
+djangorestframework-simplejwt>=5.2.0
+django-cors-headers>=4.0.0
+django-environ>=0.10.0
+djongo>=1.2.31
+django-cloudinary-storage>=0.3.0
 # Database
 psycopg2-binary>=2.9.0
 
@@ -27,7 +27,7 @@ python-dotenv==1.1.0
 environ==1.0
 
 # Numpy 
-numpy==1.23.5
+numpy>=1.23.5
 
 # JWT
 PyJWT==2.10.1
