--- a/src/backend/.env.example
+++ b/src/backend/.env.example
@@ -10,6 +10,10 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_PRODUCTION_URL=
 
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
 # in seconds
 MAX_INTERVAL=3600 
 MIN_INTERVAL=300
