--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ djangorestframework>=3.14.0
 djangorestframework-simplejwt>=5.2.0
 django-cors-headers>=4.0.0
 django-environ>=0.10.0
+dj-database-url==3.0.0
 
 # Database
 psycopg2-binary>=2.9.0
@@ -20,11 +21,12 @@ python-dotenv>=1.0.0
 
 # LLM
 llama_index==0.12.40
-llama-index-vector-stores-postgres==0.12.40
-llama-index-vector-stores-pinecone==0.12.40
+llama-index-vector-stores-postgres==0.5.3
+llama-index-vector-stores-pinecone==0.6.0
 Flask==3.1.1
 flask-cors==6.0.1
 hmmlearn==0.3.3
+gunicorn==23.0.0
 
 # Mongodb
 pymongo==4.13.0
