--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ djangorestframework-simplejwt>=5.2.0
 django-cors-headers>=4.0.0
 django-environ>=0.10.0
 dj-database-url==3.0.0
+django-cloudinary-storage==0.3.0
+cloudinary==1.44.1
+
 
 # Database
 psycopg2-binary>=2.9.0
