--- a/src/llm/requirements.txt
+++ b/src/llm/requirements.txt
@@ -11,6 +11,8 @@ llama-index-vector-stores-postgres==0.5.3
 llama-index-vector-stores-pinecone==0.6.0
 Flask==3.1.1
 flask-cors==6.0.1
+Quart==0.20.0
+quart-cors==0.8.0
 hmmlearn==0.3.3
 gunicorn==23.0.0
 
