--- a/src/llm/requirements.txt
+++ b/src/llm/requirements.txt
@@ -9,12 +9,13 @@ python-dotenv>=1.0.0
 llama_index==0.12.40
 llama-index-vector-stores-postgres==0.5.3
 llama-index-vector-stores-pinecone==0.6.0
-Flask==3.1.1
-flask-cors==6.0.1
+hmmlearn==0.3.3
 Quart==0.20.0
 quart-cors==0.8.0
-hmmlearn==0.3.3
-gunicorn==23.0.0
+Hypercorn==0.17.3
+# Flask==3.1.1
+# flask-cors==6.0.1
+# gunicorn==23.0.0
 
 # Mongodb
 pymongo==4.13.0
