--- a/src/llm/requirements.txt
+++ b/src/llm/requirements.txt
@@ -12,6 +12,7 @@ llama-index-vector-stores-pinecone==0.6.0
 hmmlearn==0.3.3
 
 Flask==3.1.1
+flask[async]==3.1.1
 flask-cors==6.0.1
 gunicorn==23.0.0
 
