--- a/.github/workflows/update_statistics.yaml
+++ b/.github/workflows/update_statistics.yaml
@@ -1,29 +1,33 @@
-name: Do Internal Action
-# on:
-#   workflow_dispatch:
-#   schedule:
-#     - cron: '0 0,6,9,12,15,18,21 * * *' # “At minute 0 past hour 0, 6, 9, 12, 15, 18, and 21.”
+name: Update Statistics
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 0,6,9,12,15,18,21 * * *' # “At minute 0 past hour 0, 6, 9, 12, 15, 18, and 21.”
 
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     steps:
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
 
-#       - name: Checkout repo content
-#         uses: actions/checkout@v2 # checkout the repository content to github runner
+      - name: Checkout repo content
+        uses: actions/checkout@v2 # checkout the repository content to github runner
 
-#       - name: Setup python
-#         uses: actions/setup-python@v4
-#         with:
-#           python-version: '3.10' # install the python version needed
+      - name: Setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10' # install the python version needed
           
-#       - name: Install python packages
-#         run: |
-#           python -m pip install --upgrade pip
-#           pip install -r requirements.txt
+      - name: Install python packages
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-#       - name: Execute cronjob script
-#         run: python cronjob/update_statistics.py
+      - name: Execute cronjob script
+        env:
+            FRONTEND_URL: ${{ secrets.FRONTEND_URL }}
+            AUTOMATION_URL: ${{ secrets.AUTOMATION_URL }}
+            LLM_URL: ${{ secrets.LLM_URL }}
+        run: python cronjob/update_statistics.py
           
 
 ####################################################
