--- a/.github/workflows/update_statistics.yaml
+++ b/.github/workflows/update_statistics.yaml
@@ -2,7 +2,9 @@ name: Update Statistics
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0,6,9,12,15,18,21 * * *' # “At minute 0 past hour 0, 6, 9, 12, 15, 18, and 21.”
+    - cron: '0 17,23,2,5,8,11,14 * * *' 
+    # “At minute 0 past hour 0, 6, 9, 12, 15, 18, and 21.”
+    # This is set to be working to UTC+7 because github actions run by default in UTC
 
 jobs:
   build:
