--- a/.github/workflows/check_schedule.yaml
+++ b/.github/workflows/check_schedule.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Install python packages
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install dotenv
 
       - name: Execute cronjob script
         env:
