--- a/.github/workflows/update_statistics.yaml
+++ b/.github/workflows/update_statistics.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Install python packages
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install dotenv
 
       - name: Execute cronjob script
         env:
