--- a/.github/workflows/update_statistics.yaml
+++ b/.github/workflows/update_statistics.yaml
@@ -23,6 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install dotenv
+          pip install requests
 
       - name: Execute cronjob script
         env:
